--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -1,4 +1,4 @@
-@import "react-slideshow-image/dist/styles.css";
+@import "../../node_modules/swiper/swiper-bundle.css";
 
 body {
   box-sizing: border-box;
@@ -16,6 +16,7 @@ body {
 
 #mapContainer img {
   max-width: 100%;
+  display: inline-block;
 }
 
 #truffleImageMap {
@@ -29,14 +30,15 @@ body {
 }
 
 #screenArea {
-  display: flex;
+  /* display: flex;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 #displayCard {
-  display: flex;
-  z-index: 5;
+  /* display: flex;
+  z-index: 5; */
 }
 
 #screenLeft {
@@ -48,18 +50,18 @@ body {
 }
 
 .react-slideshow-container {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
-  margin: auto;
+  margin: auto; */
 }
 
 .cardContainer {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
-.topCard {
+/* .topCard {
   position: absolute;
   width: 80%;
   height: 84%;
@@ -87,7 +89,7 @@ body {
   box-shadow: 0px 0px 27px 23px rgba(0, 0, 0, 0.13);
   z-index: 2;
   animation: fanOut 1.25s ease-out;
-}
+} */
 
 .screenImage {
   max-width: 80%;
