--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -40,37 +40,37 @@ body {
   animation: fadeIn 3s;
 }
 
-#screenArea {
-  /* display: flex;
+/* #screenArea {
+  display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
 }
 
 #displayCard {
-  /* display: flex;
-  z-index: 5; */
-}
+  display: flex;
+  z-index: 5;
+} */
 
-/* #screenLeft {
+#screenLeft {
   z-index: 6;
 }
 
 #screenRight {
   z-index: 6;
+}
+
+/* .react-slideshow-container {
+  width: 100%;
+  height: 100%;
+  margin: auto;
 } */
 
-.react-slideshow-container {
-  /* width: 100%;
-  height: 100%;
-  margin: auto; */
-}
-
-.cardContainer {
-  /* display: flex;
+/* .cardContainer {
+  display: flex;
   justify-content: center;
-  align-items: center; */
-}
+  align-items: center;
+} */
 
 /* .topCard {
   position: absolute;
