WIP screen rendering, continued

--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -1,5 +1,4 @@
-@import "react-slideshow-image/dist/styles.css";
-
+/* @import "react-slideshow-image/dist/styles.css"; */
 html,
 body {
   background-color: black;
