--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -1,10 +1,16 @@
-/* @import "react-slideshow-image/dist/styles.css"; */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 html,
 body {
   background-color: black;
   overflow: hidden;
   padding: 0;
   margin: 0;
+}
+
+path {
+  fill-opacity: 0;
 }
 
 #svg-image {
@@ -16,17 +22,6 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) !important;
-}
-
-.wrapper {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-path {
-  fill-opacity: 0;
 }
 
 /* #mapContainer {
@@ -54,20 +49,35 @@ path {
   z-index: 6;
 }
 
+#bgLightsOff {
+  transition: opacity 500ms;
+}
+
 /* .screenArea {
   fill-opacity: 0;
 } */
 
-.card {
-  fill-opacity: 1;
-  max-width: 100%;
-  z-index: 1000;
+.wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+/* .screenImage {
+  width: 100%;
+  height: auto;
+  margin: auto;
+} */
+
+.react-player {
+  position: absolute;
 }
 
 .react-slideshow-container {
   width: 100%;
   height: 100%;
-  margin: auto;
+  display: flex;
 }
 
 .cardContainer {
@@ -76,9 +86,63 @@ path {
   align-items: center;
 }
 
+.card {
+  width: 200px;
+  height: auto;
+}
+
 .react-3d-carousel {
   fill-opacity: 1;
   z-index: 100;
+}
+
+/* REACT SLICK 3D CAROUSEL IN <CARDSTACK> */
+.App {
+  text-align: center;
+  width: 50%;
+  margin: 10rem auto;
+  /* height: 570px; */
+}
+
+.slide img {
+  width: 20rem;
+  margin: 0 auto;
+}
+
+.slide {
+  transform: scale(0.9);
+  transition: transform 300ms;
+  opacity: 0.75;
+}
+
+.activeSlide {
+  transform: scale(1.1);
+  opacity: 1;
+}
+
+.arrow {
+  background-color: #fff;
+  position: absolute;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.arrow svg {
+  transition: color 300ms;
+}
+
+.arrow svg:hover {
+  color: #68edff;
+}
+
+.next {
+  right: 0%;
+  top: 50%;
+}
+
+.prev {
+  left: 0%;
+  top: 50%;
 }
 
 /* .topCard {
@@ -111,23 +175,14 @@ path {
   animation: fanOut 1.25s ease-out;
 } */
 
-.screenImage {
-  width: 100%;
-  height: auto;
-}
-
-.react-player {
-  position: absolute;
-  top: 1%;
-  left: 3%;
-}
+/* ____ANIMATIONS____ */
 
 .fadeIn {
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s; /* Firefox < 16 */
-  -ms-animation: fadein 2s; /* Internet Explorer */
-  -o-animation: fadein 2s; /* Opera < 12.1 */
-  animation: fadein 2s;
+  -webkit-animation: fadein ease 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein ease 2s; /* Firefox < 16 */
+  -ms-animation: fadein ease 2s; /* Internet Explorer */
+  -o-animation: fadein ease 2s; /* Opera < 12.1 */
+  animation: fadein ease 2s;
 }
 
 .fadeOut {
@@ -138,7 +193,6 @@ path {
   animation: fadeout 2s;
 }
 
-/* ____ANIMATIONS____ */
 @keyframes fadein {
   from {
     opacity: 0;
