--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -24,6 +24,34 @@ path {
   transform: translate(-50%, -50%) !important;
 }
 
+/* ----------- MOBILE----------- */
+/* Portrait */
+@media only screen and (min-device-width: 345px) and (max-device-width: 812px) and (orientation: portrait) {
+  #svg-image {
+    width: 151.108118vh;
+    left: 64%;
+  }
+}
+/* Landscape */
+@media only screen and (min-device-width: 345px) and (max-device-width: 900px) and (orientation: landscape) {
+  #svg-image {
+    height: 94vw;
+    top: 57%;
+  }
+  .wrapper {
+    height: 105vh !important;
+    width: 112vw !important;
+  }
+}
+
+/* ----------- Laptop: Non-Retina Screens ----------- */
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+}
+
+/* ----------- Laptop: Retina Screens ----------- */
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
+}
+
 /* #mapContainer {
   height: 100vh;
   width: 100vw;
@@ -53,6 +81,10 @@ path {
   transition: opacity 500ms;
 }
 
+/* #springCarousel {
+  z-index: 5;
+} */
+
 /* .screenArea {
   fill-opacity: 0;
 } */
@@ -80,6 +112,14 @@ path {
   display: flex;
 }
 
+.spring-carousel {
+  margin: 0 auto;
+  margin-top: 2rem;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
+
 .cardContainer {
   display: flex;
   justify-content: center;
@@ -87,7 +127,7 @@ path {
 }
 
 .card {
-  width: 200px;
+  width: 600px;
   height: auto;
 }
 
@@ -434,3 +474,5 @@ path {
   -webkit-animation-name: flipInX;
   animation-name: flipInX;
 }
+
+@media;
